--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,29 @@
-/* CSS Document */
+/* ©Andolo */
+.grid-container {
+  display: grid;
+  column-gap: 50px;
+  row-gap: 170px;
+  grid-template-columns: auto auto;  
+}
+
+#main
+{
+  background-color: rgba(239, 198, 248, 0.959);
+}
+
+#News
+{
+  
+  background-color: rgba(13, 28, 53, 0.179);
+}
+
+#title
+{
+
+  text-align: center;
+  font-size:4vw;
+}
+
 #Bla{
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
