--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@
 
 #prosjekt
 {
+  background-color: rgba(23, 11, 66, 0.214);
   margin: 10%;
   width: 80%;
   border: 5px solid rgb(222, 202, 255);
